--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <img class="logo" src="./imagenes/feliz navidad.jpeg" alt="Imagen con frase de feliz navidad" title="FELIZ NAVIDAD">
         </header>
       <main class="conteiner">
-        <h1 id="man_inv" > HISTORIA DE LA NAVIDAD</h1>
-        <p>
+        <h1 class="man_inv" > HISTORIA DE LA NAVIDAD</h1>
+        <p class="man_inv_pa">
             La navidad es una de las celebraciones más importantes en todo el mundo. Es un hito importante para nosotros, el final de un año, tiempo de regalos, festejos, reuniones familiares y para los cristianos practicantes- una emotiva fiesta religiosa. <br> Aunque la Navidad es actualmente época de regalos, de celebraciones y reuniones familiares, lo cierto es que su origen responde en realidad a otros factores históricos que involucran al poderoso Imperio Romano, a ritos paganos y poco tienen que ver con el hecho histórico que conmemoran: el nacimiento del niño Jesús. Todos sabemos que el 25 de diciembre se conmemora el nacimiento de Jesús de Nazaret, pero la verdad es que se desconoce la fecha exacta de este hecho histórico. El análisis de ciertos fragmentos de los evangelios, así como de otros documentos de aquella época, han permitido a los historiadores realizar diferentes hipótesis sobre el nacimiento de Jesucristo. Algunos hablan de abril o mayo, mientras que otros concluyen que fue en Septiembre u Octubre.           
-            <br>EL ORIGEN PAGANO DE LA NAVIDAD.
-            <img src="./imagenes/arbol de navidad.jpeg" alt="Imagen de un arbol de Navidad" title="Arbol Navideño">
+            <br class="man_br">EL ORIGEN PAGANO DE LA NAVIDAD.
+            <img class="man_img" src="./imagenes/arbol de navidad.jpeg" alt="Imagen de un arbol de Navidad" title="Arbol Navideño">
             <br>Aunque normalmente asociamos el origen de la Navidad a los mitos cristianos y al catolicismo, puesto que representa el nacimiento del niño Jesús; en realidad, esto es un error, al menos tal y como tenemos hoy en día aceptada la Navidad.
             <br>Precisamente, por esta duda entre la Navidad pagana y la Navidad cristiana, hubo un caso en 1990 en el que la junta escolar de Solon (Ohio) decidió eliminar todas la representaciones de la Navidad en cualquier ámbito escolar, puesto que era una práctica en contra del Estado laico de la ciudad, es decir, no respetaba la sepación entre Iglesia y Estado. Igualmente, la junta perdió el caso porque las familias se oposieron a que sus hijos no pudiesen celebrar la Navidad en el colegio, defendiendo que la práctica de la Navidad era un acto secular y formaba parte de todas las culturas del mundo. A pesar de que la junta perdiera el caso, sí lograron eliminar las oraciones y la lectura de la biblia, asociadas a la celebración de la Navidad.
         </p>
