Acomodando el logo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
        <meta name="robots" content="index,follow"/>    
        <title>FELIZ NAVIDAD</title>
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <link rel="stylesheet" href="./style.css">
+       <link rel="stylesheet" href="./CSS/style.css">
+       <link rel="stylesheet" href="./CSS/cel.css" media="and (min-width:600px)">
+       <link rel="stylesheet" href="./CSS/tablet.css" media="and (min-width:800px)">
     </head>
     <body>
         <header>
@@ -21,6 +23,8 @@
             <br>Aunque normalmente asociamos el origen de la Navidad a los mitos cristianos y al catolicismo, puesto que representa el nacimiento del niño Jesús; en realidad, esto es un error, al menos tal y como tenemos hoy en día aceptada la Navidad.
             <br>Precisamente, por esta duda entre la Navidad pagana y la Navidad cristiana, hubo un caso en 1990 en el que la junta escolar de Solon (Ohio) decidió eliminar todas la representaciones de la Navidad en cualquier ámbito escolar, puesto que era una práctica en contra del Estado laico de la ciudad, es decir, no respetaba la sepación entre Iglesia y Estado. Igualmente, la junta perdió el caso porque las familias se oposieron a que sus hijos no pudiesen celebrar la Navidad en el colegio, defendiendo que la práctica de la Navidad era un acto secular y formaba parte de todas las culturas del mundo. A pesar de que la junta perdiera el caso, sí lograron eliminar las oraciones y la lectura de la biblia, asociadas a la celebración de la Navidad.
         </p>
-        </main>    
+        </main>
+        
+        <footer><p>derechos de autor</p></footer>
     </body>
   </html>
