Se acomodo el Main del FOOTER

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         
         <footer>
           
-          <main>
-            <p>Copyrimrte © 2022 JMMM, Inc.</p>
-            <ul class=""></ul>
-            <li class="footer_in"><a href="" ><a> <botton>Aspecto legal</botton></a></li>
-            <li class="footer_in"><a href=""><a><botton>Politica de privacidad</botton></a></li>
-            <li class="footer_in"><a href=""><a><botton>Seguridad</botton></a></li>
+          <main class="footer_in">
+            <p class="footer_in" >Copyrimrte © 2022 JMMM, Inc.</p>
+          <ul>
+            <li class="footer_in"><a href=""><botton>Aspecto legal</botton></a></li>
+            <li class="footer_in"><a href=""><botton>Politica de privacidad</botton></a></li>
+            <li class="footer_in"><a href=""><botton>Seguridad</botton></a></li>
           </ul>
 
           </main>
