Se acomodo el index

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
         </p>
         </main>
         
-        <footer><p>derechos de autor</p></footer>
+        <footer><p>derechos de autor mm</p></footer>
     </body>
   </html>
